更新项目结构 进入到资料收集阶段

--- a/pom.xml
+++ b/pom.xml
@@ -53,12 +53,22 @@
 		</license>
 	</licenses>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>${junit.version}</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+
+	<modules>
+		<module>Redis-Synyed-Agent</module>
+		<module>Redis-Synyed-Manager</module>
+		<module>Redis-Synyed-common</module>
+		<module>Redis-Synyed-util</module>
+		<module>Redis-Synyed-test</module>
+	</modules>
 </project>
