--- a/Redis-Synyed-Agent/pom.xml
+++ b/Redis-Synyed-Agent/pom.xml
@@ -11,10 +11,21 @@
 	<artifactId>Redis-Synyed-Agent</artifactId>
 	<name>Redis-Synyed-Agent</name>
 	<url>https://github.com/wmz7year/Redis-Synyed</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>com.wmz7year</groupId>
+			<artifactId>Redis-Synyed-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
