--- a/Redis-Synyed-common/pom.xml
+++ b/Redis-Synyed-common/pom.xml
@@ -16,12 +16,17 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.wmz7year</groupId>
+			<artifactId>Redis-Synyed-util</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
