--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<spring.boot.version>1.2.7.RELEASE</spring.boot.version>
 		<mina.version>2.0.9</mina.version>
 		<commons.io.version>2.4</commons.io.version>
+		<commons.lang.version>3.4</commons.lang.version>
 		<junit.version>4.12</junit.version>
 	</properties>
 
@@ -58,6 +59,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons.lang.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
@@ -138,6 +144,6 @@
 		<module>Redis-Synyed-Manager</module>
 		<module>Redis-Synyed-common</module>
 		<module>Redis-Synyed-util</module>
-		
+
 	</modules>
 </project>
