添加单Agent 单个源Redis到单个目标Redis的同步功能
	目前为最初级的设计

--- a/Redis-Synyed-Agent/src/main/resources/dev/application.properties
+++ b/Redis-Synyed-Agent/src/main/resources/dev/application.properties
@@ -1,1 +1,9 @@
 logging.config=classpath:dev/logback.xml
+
+protocol.src.host=127.0.0.1
+protocol.src.port=6380
+protocol.src.auth=password
+
+protocol.desc.host=127.0.0.1
+protocol.desc.port=6381
+protocol.desc.auth=password
