移除SynJob	添加ProtocolSyncWorker概念

--- a/Redis-Synyed-Agent/src/main/resources/application.properties
+++ b/Redis-Synyed-Agent/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.config=classpath:dev/logback.xml
 
+server.pool.protocol.syncworker.size=10
+
 protocol.src.host=127.0.0.1
 protocol.src.port=6380
 protocol.src.auth=password
