--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<mina.version>2.0.9</mina.version>
 		<commons.io.version>2.4</commons.io.version>
 		<commons.lang.version>3.4</commons.lang.version>
+		<commons.codec.version>1.10</commons.codec.version>
 		<junit.version>4.12</junit.version>
 	</properties>
 
@@ -59,6 +60,11 @@
 
 	<dependencyManagement>
 		<dependencies>
+			<dependency>
+				<groupId>commons-codec</groupId>
+				<artifactId>commons-codec</artifactId>
+				<version>${commons.codec.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
