添加jedis测试以来  用于单元测试

--- a/Redis-Synyed-Agent/pom.xml
+++ b/Redis-Synyed-Agent/pom.xml
@@ -88,5 +88,10 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
