创建连接时使用RedisConnectionFactory统一方法创建Redis连接对象
	当进行同步作业时，收到RDB同步文件解析命令时采用线程池进行并发同步 提高同步速度

	目前测试的结果为1个线程1秒钟可以同步180条命令

--- a/Redis-Synyed-Agent/src/main/resources/application.properties
+++ b/Redis-Synyed-Agent/src/main/resources/application.properties
@@ -1,9 +1,15 @@
 server.pool.protocol.syncworker.size=10
 
-protocol.src.host=127.0.0.1
-protocol.src.port=6380
-protocol.src.auth=password
+protocol.rdb.syn.connection.size=10
 
-protocol.desc.host=127.0.0.1
-protocol.desc.port=6381
-protocol.desc.auth=password
+protocol.src.host=
+protocol.src.port=
+protocol.src.auth=
+
+protocol.desc.host=
+protocol.desc.port=
+protocol.desc.auth=
+
+
+server.rmi.host=127.0.0.1
+server.rmi.port=9999
